--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Custom Property below */
 :root {
     --overlay-color: #03a9f4;
 }
@@ -21,9 +22,10 @@
     background: rgba(17, 17, 34, 0.75);
     color:aliceblue;
     z-index: 2;
+    transition: 0.5s;
 }
 
-/* Right Side Nav Bar */
+/* Right Side Nav Bar on toggle */
 .showcase.active {
     right: 150px;
 }
@@ -39,7 +41,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255, 0.65);
 }
 
 .logo{
@@ -59,18 +60,27 @@
     right: 10px;
 }
 
-.toggle i{
-    position: absolute;
-    left: 4px;
-    bottom: 1px;
+/* Active state of toggle below, background turns blue on click */
+.toggle:active {
+    background-color: blue;
 }
 
-/* 
-Still need to fill out, make toggle change into Exit Icon
-Targeting active state of toggle below
-*/
-.toggle:active{
-    background-color: black; 
+/* Add Font Awesome Icon  */
+.toggle i:before {
+    font-family: FontAwesome; 
+    content: "\f0d7";
+    position: absolute;
+    left: 5px;
+    bottom: -3px;
+}
+
+/* Change Font Awesome Icon on active state */
+.toggle.active i:before {
+    font-family: FontAwesome; 
+    content: "\f0d8";
+    position: absolute;
+    left: 5px;
+    bottom: 3px;
 }
 
 /* Center and fit Video */
@@ -91,7 +101,7 @@ Targeting active state of toggle below
     left: 0px;
     width: 100%;
     height: 100%;
-    background: #03a9f4;
+    background: var(--overlay-color);
     mix-blend-mode: overlay;
 }
 
@@ -99,6 +109,7 @@ Targeting active state of toggle below
 .text {
     position: relative;
     z-index: 10;
+    padding-right: 10%;
 }
 
 .text h2{
@@ -118,7 +129,7 @@ Targeting active state of toggle below
 }
 
 .text p{
-    margin: 10px -40px;
+    margin-top: 20px ;
     max-width: 900px;
 }
 
@@ -148,6 +159,8 @@ Targeting active state of toggle below
     bottom: 20px;
     left: 10px;
     display: flex;
+    z-index: 16;
+    color: white;
 }
 
 .social li{
@@ -168,7 +181,7 @@ Targeting active state of toggle below
     right: 0;
     width: 150px;
     height: 100%;
-    background-color: black;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -177,25 +190,21 @@ Targeting active state of toggle below
 .menu li{
     list-style: none;
     font-size: 1.5em;
+    padding-top: 30px;
 }
-
 
 .menu li:hover{
     color: var(--overlay-color);
-    transform: scale(1.2) translateX(3px);
+    transform: scale(1.2) translateX(-10px);
     transition: .2s;
 }
 
-/* Fix problem with click on page highlights all menu */
-/* .showcase:active .menu{
-    letter-spacing: 6px;
-    font-size: 1.3em;
-    color: aqua;
-    right: 0px;
-    background-color: black;
-} */
+/* Mobile CSS Styling */
+@media(max-width:450px){
+    .logo{
+        visibility: hidden;
+    }
 
-@media(max-width:600px){
     .text h2{
         font-weight: 800;
     }
@@ -208,4 +217,12 @@ Targeting active state of toggle below
         font-size: small;
         padding-top: 10px;
         }
+    
+    .social{
+        position: relative;
+        padding-top: 20px;
+        margin-right: 30%;
+        color: rgb(202, 165, 202)
+    }
+    
 }
